welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: type mismatch;
 found   : Unit
 required: Int
	if (Math.abs(10-a) == Math.abs(10-b)) { return 0}
        ^